docker-push/kube-vol/mongopod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: mongo
  name: mongo
spec:
  containers:
  - image: mongo:3.6
    name: mongo
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
