docker-push/kube-vol/pod_vol.yaml
kind: Pod
apiVersion: v1
metadata:
  name: db-pod
spec:
  containers:
  - name: db-pod
    image: mongo:3.6
    resources:
      requests:
        cpu: 100m
        memory: 128Mi
      limits:
        cpu: 250m
        memory: 256Mi
    volumeMounts:
    - mountPath: "/data/db"
      name: volume
  volumes:
    - name: volume
      persistentVolumeClaim:
        claimName: azure-managed-disk
