docker-push/kube-vol/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: db-service
  name: db-service
spec:
  ports:
  - name: 80-27017
    port: 80
    protocol: TCP
    targetPort: 27017
  selector:
    run: db
  type: ClusterIP
status:
  loadBalancer: {}
